--- a/src/Components/CheckOut/styles.css
+++ b/src/Components/CheckOut/styles.css
@@ -5,5 +5,22 @@
 }
 
 .scrollable-cards {
-  overflow: auto;
+  background: #f5f5f5;
+  margin-bottom: 25px;
+  overflow-y: scroll;
+}
+
+.scrollable-cards::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #f8fae5;
+}
+
+.scrollable-cards::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f8fae5;
+}
+
+.scrollable-cards::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #cccccc;
 }
